--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "animation-list",
+  "name": "animation-collection",
   "version": "0.1.0",
-  "homepage": "https://Honey-Bi.github.io/animation-list",
+  "homepage": "https://Honey-Bi.github.io/animation-collection",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
